Issue #46 Vertical Alignment
Updated CSS, to vertical align the modal dialog cross-browser

--- a/src/bootstrap-wizard.css
+++ b/src/bootstrap-wizard.css
@@ -3,7 +3,12 @@
 	display:none;	
 }
 
-.wizard-dialog {}
+.wizard-dialog {
+	transform: translate(0, 50%) !important;
+	-ms-transform: translate(0, 50%) !important; /* IE 9 */
+	-webkit-transform: translate(0, 50%) !important; /* Safari and Chrome */
+}
+
 .wizard-content {}
 
 .wizard-body {
